[gd_scene load_steps=5 format=3 uid="uid://x8mtlt4d6yne"]

[ext_resource type="Script" path="res://Game/Events/event_ui.gd" id="1_w6c1c"]
[ext_resource type="PackedScene" uid="uid://cwtklmgj62l4b" path="res://Game/Interface/Specials/bullet_point.tscn" id="2_emvse"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wlwiq"]
bg_color = Color(0.0769661, 0.218715, 0.198694, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ayirv"]

[node name="EventUI" type="Panel"]
z_index = 1001
custom_minimum_size = Vector2(350, 500)
anchors_preset = -1
anchor_right = 0.867797
anchor_bottom = 0.450704
mouse_force_pass_scroll_events = false
theme_override_styles/panel = SubResource("StyleBoxFlat_wlwiq")
script = ExtResource("1_w6c1c")
event_during_time = 30
metadata/_edit_use_anchors_ = true

[node name="MarginContainer" type="MarginContainer" parent="."]
custom_minimum_size = Vector2(0, 75)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
metadata/_edit_use_anchors_ = true

[node name="NameOfEventLabel" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "NameOf event"
horizontal_alignment = 1

[node name="EventDescriptionLabel" type="RichTextLabel" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 110)
layout_mode = 2
size_flags_vertical = 3
text = "Ici nous avons la description de l'event. Il faut compter 3 lignes pour etre large, meme si Ã§a rentre peut etre en 2"

[node name="HBoxContainer" type="GridContainer" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 325)
layout_mode = 2
size_flags_vertical = 10

[node name="ChoiceAButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(225, 160)
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/ChoiceAButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ChoiceAName" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/ChoiceAButton/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
text = "Aider la pauvre  FKEMLFKERMFKRELMFKERLMKFELKFLMELMFKERMLFKEFEK"
horizontal_alignment = 1
autowrap_mode = 2

[node name="ChoiceAContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/ChoiceAButton/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
metadata/_edit_use_anchors_ = true

[node name="BulletPoint3" parent="MarginContainer/VBoxContainer/HBoxContainer/ChoiceAButton/VBoxContainer/ChoiceAContainer" instance=ExtResource("2_emvse")]
layout_mode = 2
size_flags_vertical = 0

[node name="BulletPoint4" parent="MarginContainer/VBoxContainer/HBoxContainer/ChoiceAButton/VBoxContainer/ChoiceAContainer" instance=ExtResource("2_emvse")]
layout_mode = 2
size_flags_vertical = 0

[node name="BulletPoint5" parent="MarginContainer/VBoxContainer/HBoxContainer/ChoiceAButton/VBoxContainer/ChoiceAContainer" instance=ExtResource("2_emvse")]
layout_mode = 2
size_flags_vertical = 0

[node name="BulletPoint6" parent="MarginContainer/VBoxContainer/HBoxContainer/ChoiceAButton/VBoxContainer/ChoiceAContainer" instance=ExtResource("2_emvse")]
layout_mode = 2
size_flags_vertical = 0

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(0, 5)
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_ayirv")

[node name="ChoiceBButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(225, 160)
layout_mode = 2
focus_mode = 0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/ChoiceBButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ChoiceBName" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/ChoiceBButton/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
text = "Aider la pauvre "
horizontal_alignment = 1
autowrap_mode = 2

[node name="ChoiceBContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/ChoiceBButton/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
metadata/_edit_use_anchors_ = true

[node name="BulletPoint" parent="MarginContainer/VBoxContainer/HBoxContainer/ChoiceBButton/VBoxContainer/ChoiceBContainer" instance=ExtResource("2_emvse")]
layout_mode = 2

[node name="BulletPoint2" parent="MarginContainer/VBoxContainer/HBoxContainer/ChoiceBButton/VBoxContainer/ChoiceBContainer" instance=ExtResource("2_emvse")]
layout_mode = 2

[node name="BulletPoint3" parent="MarginContainer/VBoxContainer/HBoxContainer/ChoiceBButton/VBoxContainer/ChoiceBContainer" instance=ExtResource("2_emvse")]
layout_mode = 2

[node name="BulletPoint4" parent="MarginContainer/VBoxContainer/HBoxContainer/ChoiceBButton/VBoxContainer/ChoiceBContainer" instance=ExtResource("2_emvse")]
layout_mode = 2
